--- a/hex-colour-flipper/index.html
+++ b/hex-colour-flipper/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flipper || Simple</title>
+    <title>Hex Colour Flipper</title>
 
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
